# StockMarketGame

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: databaseHandler.hpp  stockRetriever.h
src/: databaseHandler.cpp  main.cpp  stockRetriever.cpp
testing/: CMakeLists.txt  build.sh
